<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:text="@string/welcome_to_our_donation_app"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/firstmes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:paddingTop="20dp"
        android:text="@string/please_select_the_payment_method"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/pmrg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstmes"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:paddingTop="20dp">

        <RadioButton
            android:id="@+id/ppRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paypal" />

        <RadioButton
            android:id="@+id/ccRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credit_card" />

    </RadioGroup>

    <EditText
        android:id="@+id/amountText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/donatebutton"
        android:hint="@string/donation_amount"
        android:inputType="number|numberDecimal"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/donatebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/donate_now" />

</RelativeLayout>